Remove ox-layout-data nowrap on white space to avoid overflow of elements.

--- a/trunk/OpenXava/web/style/portal.css
+++ b/trunk/OpenXava/web/style/portal.css
@@ -436,7 +436,6 @@ TD.list-title {
 }
 
 .ox-layout-data {
-	white-space:nowrap;
 }
 
 /* subcontroller --------> */
